Fixed to preserve whitespace in messages.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -155,6 +155,9 @@ room-members-sidebar-width = 150px
     color #ccc
     font-size 10px
 
+  .message-body
+    white-space pre-wrap
+
 .send-message-area
   position absolute
   bottom 0
